--- a/Makefile.defs
+++ b/Makefile.defs
@@ -13,7 +13,7 @@ CC = g++
 GCC_OPTIONS= -pedantic -g -std=c++11
 
 # What libraries to link GLU is included for backwards compatibility
-LDLIBS = -lGL -lGLU /usr/lib/x86_64-linux-gnu/libglut.so.3 /usr/lib/x86_64-linux-gnu/libGLEW.so.2.0 -lSDL2 -lSDL2main -lSDL2_ttf -lSDL2_image -lSDL2_mixer
+LDLIBS = -lGL -lGLU /usr/lib/x86_64-linux-gnu/libglut.so.3 /usr/lib/x86_64-linux-gnu/libGLEW.so.2.0
 
 # Not sure why the following won't work.  Probably a misconfigured Ubuntu.
 #LDLIBS = -lGL -lglut
